--- a/basicNLP.ipynb
+++ b/basicNLP.ipynb
@@ -7,20 +7,11 @@
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Program Files\\Anaconda3\\lib\\site-packages\\nltk\\twitter\\__init__.py:20: UserWarning: The twython library has not been installed. Some functionality from the twitter package will not be available.\n",
-      "  warnings.warn(\"The twython library has not been installed. \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ignore twython library missing, we aren't using it's functionality\n",
     "# Must use nltk.download() and get the Opinion Lexicon and Vader Lexicon\n",
-    "from basic_nlp import *"
+    "from nlp import *"
    ]
   },
   {
@@ -32,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -80,7 +71,7 @@
        " 'soon']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -151,7 +142,7 @@
        " 'soon']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -189,7 +180,7 @@
        " 'y': 5}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -250,7 +241,7 @@
        " ('yesterday',): 1}"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -314,7 +305,7 @@
        "          ('WRB', 'WRB', 'PRP$'): 1})"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,21 +324,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'syllableGrams' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-078c2a19c915>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msyllableGrams\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtokens\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'syllableGrams' is not defined"
-     ],
-     "output_type": "error"
+     "data": {
+      "text/plain": [
+       "[(1, 1, 3),\n",
+       " (1, 3, 1),\n",
+       " (3, 1, 2),\n",
+       " (1, 2, 2),\n",
+       " (2, 2, 1),\n",
+       " (2, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 2),\n",
+       " (1, 2, 1),\n",
+       " (2, 1, 3),\n",
+       " (1, 3, 1),\n",
+       " (3, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 2),\n",
+       " (1, 2, 2),\n",
+       " (2, 2, 1),\n",
+       " (2, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -363,22 +377,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'vowelGrams' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-62-6489639ea01d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvowelGrams\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtokens\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'vowelGrams' is not defined"
-     ],
-     "output_type": "error"
+     "data": {
+      "text/plain": [
+       "[(1, 1, 0),\n",
+       " (1, 0, 1),\n",
+       " (0, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 0),\n",
+       " (1, 0, 1),\n",
+       " (0, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 0),\n",
+       " (1, 0, 1),\n",
+       " (0, 1, 0),\n",
+       " (1, 0, 1),\n",
+       " (0, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 0),\n",
+       " (1, 0, 1),\n",
+       " (0, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1),\n",
+       " (1, 1, 1)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -394,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -406,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -418,7 +465,7 @@
        "0.06201550387596899"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -441,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -461,7 +508,7 @@
        "          ('NC', 'NC', 'NC'): 15})"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -552,7 +599,7 @@
        "  'Vader': {'compound': 0.0, 'neg': 0.0, 'neu': 1.0, 'pos': 0.0}}]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -577,7 +624,7 @@
        "  'Vader': {'compound': -0.3612, 'neg': 0.072, 'neu': 0.928, 'pos': 0.0}}]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -644,7 +691,7 @@
        " ('soon', 'RB')]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -703,7 +750,7 @@
        " ('soon', 'RB')]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -731,13 +778,107 @@
     {
      "data": {
       "text/plain": [
-       "{\"'\": (1, 0.0054, 0.1429),\n",
-       " ',': (3, 0.0163, 0.4286),\n",
-       " '.': (2, 0.0109, 0.2857),\n",
-       " '?': (1, 0.0054, 0.1429)}"
+       "{'!_RAW': 0.0,\n",
+       " '!_RAW/LEN': 0.0,\n",
+       " '!_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '\"_RAW': 0.0,\n",
+       " '\"_RAW/LEN': 0.0,\n",
+       " '\"_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '#_RAW': 0.0,\n",
+       " '#_RAW/LEN': 0.0,\n",
+       " '#_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '$_RAW': 0.0,\n",
+       " '$_RAW/LEN': 0.0,\n",
+       " '$_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '%_RAW': 0.0,\n",
+       " '%_RAW/LEN': 0.0,\n",
+       " '%_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '&_RAW': 0.0,\n",
+       " '&_RAW/LEN': 0.0,\n",
+       " '&_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " \"'_RAW\": 1,\n",
+       " \"'_RAW/LEN\": 0.0054,\n",
+       " \"'_RAW/TOTAL_PUNCT_FOUND\": 0.1429,\n",
+       " '(_RAW': 0.0,\n",
+       " '(_RAW/LEN': 0.0,\n",
+       " '(_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " ')_RAW': 0.0,\n",
+       " ')_RAW/LEN': 0.0,\n",
+       " ')_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '*_RAW': 0.0,\n",
+       " '*_RAW/LEN': 0.0,\n",
+       " '*_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '+_RAW': 0.0,\n",
+       " '+_RAW/LEN': 0.0,\n",
+       " '+_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " ',_RAW': 3,\n",
+       " ',_RAW/LEN': 0.0163,\n",
+       " ',_RAW/TOTAL_PUNCT_FOUND': 0.4286,\n",
+       " '-_RAW': 0.0,\n",
+       " '-_RAW/LEN': 0.0,\n",
+       " '-_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '._RAW': 2,\n",
+       " '._RAW/LEN': 0.0109,\n",
+       " '._RAW/TOTAL_PUNCT_FOUND': 0.2857,\n",
+       " '/_RAW': 0.0,\n",
+       " '/_RAW/LEN': 0.0,\n",
+       " '/_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " ':_RAW': 0.0,\n",
+       " ':_RAW/LEN': 0.0,\n",
+       " ':_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " ';_RAW': 0.0,\n",
+       " ';_RAW/LEN': 0.0,\n",
+       " ';_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '<_RAW': 0.0,\n",
+       " '<_RAW/LEN': 0.0,\n",
+       " '<_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '=_RAW': 0.0,\n",
+       " '=_RAW/LEN': 0.0,\n",
+       " '=_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '>_RAW': 0.0,\n",
+       " '>_RAW/LEN': 0.0,\n",
+       " '>_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '?_RAW': 1,\n",
+       " '?_RAW/LEN': 0.0054,\n",
+       " '?_RAW/TOTAL_PUNCT_FOUND': 0.1429,\n",
+       " '@_RAW': 0.0,\n",
+       " '@_RAW/LEN': 0.0,\n",
+       " '@_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " 'TOTAL': 7,\n",
+       " 'TOTAL/LENGTH': 0.038,\n",
+       " '[_RAW': 0.0,\n",
+       " '[_RAW/LEN': 0.0,\n",
+       " '[_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '\\\\_RAW': 0.0,\n",
+       " '\\\\_RAW/LEN': 0.0,\n",
+       " '\\\\_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " ']_RAW': 0.0,\n",
+       " ']_RAW/LEN': 0.0,\n",
+       " ']_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '^_RAW': 0.0,\n",
+       " '^_RAW/LEN': 0.0,\n",
+       " '^_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '__RAW': 0.0,\n",
+       " '__RAW/LEN': 0.0,\n",
+       " '__RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '`_RAW': 0.0,\n",
+       " '`_RAW/LEN': 0.0,\n",
+       " '`_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '{_RAW': 0.0,\n",
+       " '{_RAW/LEN': 0.0,\n",
+       " '{_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '|_RAW': 0.0,\n",
+       " '|_RAW/LEN': 0.0,\n",
+       " '|_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '}_RAW': 0.0,\n",
+       " '}_RAW/LEN': 0.0,\n",
+       " '}_RAW/TOTAL_PUNCT_FOUND': 0.0,\n",
+       " '~_RAW': 0.0,\n",
+       " '~_RAW/LEN': 0.0,\n",
+       " '~_RAW/TOTAL_PUNCT_FOUND': 0.0}"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,9 +894,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -768,7 +907,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
