fixed json document format, was producing an error

--- a/extract_sarcastic-serious_json.ipynb
+++ b/extract_sarcastic-serious_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
     "import json\n",
     "from pprint import pprint\n",
     "import re\n",
-    "from os import listdir\n",
+    "from os import listdir, SEEK_END\n",
     "import datetime\n",
     "import random"
    ]
@@ -284,26 +284,48 @@
     "seriousCount = 0\n",
     "sarcastic = open('json/sarcastic0.json', 'a')\n",
     "serious = open('json/serious0.json', 'a')\n",
+    "sarcastic.write('[\\n')\n",
+    "serious.write('[\\n')\n",
     "for n, (sarcasm, comment) in enumerate(commentGenerator()):\n",
     "    try:\n",
     "        if sarcasm:\n",
     "            json.dump({'text':comment}, sarcastic)\n",
-    "            sarcastic.write('\\n')\n",
     "            sarcasticCount += 1\n",
+    "            if sarcasticCount % 100000 == 0:\n",
+    "                serious.write('\\n]')\n",
+    "                sarcastic.close()\n",
+    "                sarcastic = open('json/sarcastic%d.json'%sarcasticCount, 'a')\n",
+    "            else:\n",
+    "                sarcastic.write(',\\n')\n",
     "        else:\n",
     "            json.dump({'text':comment}, serious)\n",
-    "            serious.write('\\n')\n",
     "            seriousCount += 1\n",
-    "        if seriousCount % 100000 == 0:\n",
-    "            serious.close()\n",
-    "            serious = open('json/serious%d.json'%seriousCount, 'a')\n",
-    "        elif sarcasticCount % 100000 == 0:\n",
-    "            sarcastic.close()\n",
-    "            sarcastic = open('json/sarcastic%d.json'%sarcasticCount, 'a')\n",
+    "            if seriousCount % 100000 == 0:\n",
+    "                serious.write('\\n]')\n",
+    "                serious.close()\n",
+    "                serious = open('json/serious%d.json'%seriousCount, 'a')\n",
+    "            else:\n",
+    "                serious.write(',\\n')\n",
     "    except:\n",
     "        print(\"Error on index %s, : (%s, %s)\"%(n, sarcasm, comment))\n",
     "        sarcastic.close()\n",
     "        serious.close()\n",
+    "        \n",
+    "sarcastic.close()\n",
+    "serious.close()\n",
+    "\n",
+    "sarcasticname = sarcastic.name\n",
+    "seriousname = serious.name\n",
+    "\n",
+    "sarcastic.close()\n",
+    "serious.close()\n",
+    "\n",
+    "sarcastic = open(sarcasticname, 'r+b')\n",
+    "serious = open(seriousname, 'r+b')\n",
+    "sarcastic.seek(-3, SEEK_END)\n",
+    "sarcastic.write(bytes(\"\\r\\n]\", 'utf8'))\n",
+    "serious.seek(-3, SEEK_END)\n",
+    "serious.write(bytes(\"\\r\\n]\", 'utf8'))\n",
     "sarcastic.close()\n",
     "serious.close()"
    ]
@@ -319,15 +341,6 @@
     "sarcastic.close()\n",
     "serious.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
