commented section that needs translation to spark transcription

--- a/extract_sarcastic-serious_json.ipynb
+++ b/extract_sarcastic-serious_json.ipynb
@@ -55,6 +55,9 @@
     "            print(\"Processing file %s, starttime: %s\"%(name, start))\n",
     "            pop = []\n",
     "            for n, line in enumerate(open(name)):\n",
+    "            ## HERE to\n",
+    "            ## ___________________________________________________________________________________________\n",
+    "            ##\n",
     "                try:\n",
     "                    body = json.loads(line)['body']\n",
     "                    if 10 <= len(body) <= 300:\n",
@@ -62,8 +65,6 @@
     "                        if(sarcasm_re.search(compareText) is not None) or \\\n",
     "                        ((sarc.search(compareText) is not None) and (strike.search(compareText) is None)):\n",
     "                            yield (True, body)\n",
-    "                            yield (False, random.choice(pop))\n",
-    "                            pop = []\n",
     "                        else:\n",
     "                            pop.append(body)\n",
     "                            if len(pop) == 1000:\n",
@@ -71,6 +72,11 @@
     "                                pop = []\n",
     "                except:\n",
     "                    print(\"Error on line %s, : %s\"%(n, line))\n",
+    "            ## \n",
+    "            ## _____________________________________________________________________________________________\n",
+    "            ## HERE\n",
+    "            ## The documents are in the correct format for spark to process with it's json library\n",
+    "            ## There is at least 1 entry which is invalid so loading the body will result in an error\n",
     "            print(\"Finished: \" + str(datetime.datetime.now()-start))"
    ]
   },
