--- a/src/extract_sarcastic-serious_json.ipynb
+++ b/src/extract_sarcastic-serious_json.ipynb
@@ -19,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "list_re = [\n",
@@ -81,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_rdd = sqlContext.read.format('json').load('json/serious100000.json')\n",
@@ -92,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -100,26 +106,77 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
    "source": [
     "def filterComments(generator):\n",
+    "    import nlp\n",
+    "    import ml\n",
     "    pop = []\n",
     "    for comment in generator:\n",
     "            text = comment['text'].lower()\n",
     "            if 10 <= len(text) <= 300:\n",
     "                if sarcasm_re.search(text) is not None or \\\n",
     "                (sarc.search(text) is not None and (strike.search(text) is not None)):\n",
-    "                    yield (True, comment['text'])\n",
+    "                    yield (True, flattenDict(feature(comment['text'], nlp.ckeanTokensReddit)))\n",
     "                else:\n",
-    "                    yield(text)\n",
     "                    pop.append(comment['text'])\n",
-    "                    if len(pop) == 1000:\n",
-    "                        yield (False, random.choice(pop))\n",
+    "                    if len(pop) == 1300:\n",
+    "                        yield (False, flattenDict(feature(random.choice(pop), nlp.ckeanTokensReddit)))\n",
     "                        pop = []\n",
-    "    \n",
-    "rdd.mapPartitions(filterComments).collect()"
+    "                        \n",
+    "features = rdd.mapPartitions(filterComments)\n",
+    "\n",
+    "def getVocab(gen):\n",
+    "    for sarc, features in gen:\n",
+    "        for key in feature:\n",
+    "            yield key\n",
+    "\n",
+    "from dvs import DictVectorizerPartial\n",
+    "\n",
+    "vocab = dict(features.mapPartitions(getVocab).unique().zipWithIndex().collect())\n",
+    "\n",
+    "dvp = DictVectorizerPartial(vocab=vocab) #this is not the correct syntax\n",
+    "\n",
+    "def vectorize(gen, dv):\n",
+    "    blocksize = 100000\n",
+    "    sarclst = []\n",
+    "    featlst = []\n",
+    "    for sarc, features in gen:\n",
+    "        sarclst.append(sarc)\n",
+    "        featlst.append(features)\n",
+    "        if len(sarclst) == 100000:\n",
+    "            yield (sarclst, dv.transform(featlst))\n",
+    "            sarclst = []\n",
+    "            featlst = []\n",
+    "    yield (sarclst, dv.transform(featlst))\n",
+    "\n",
+    "vdvp = lambda gen: vectorize(gen, dvp)\n",
+    "csrs = features.mapPartitions(vdvp)\n",
+    "\n",
+    "def vstack(a,b):\n",
+    "    from scipy.sparse import csr_matrix, vstack\n",
+    "    asarc = a[0]\n",
+    "    acsr = a[1]\n",
+    "    bsarc = b[0]\n",
+    "    bcsr = b[1]\n",
+    "    return asarc.append(bsarc), vstack([acsr,bcsr], format='csr')\n",
+    "\n",
+    "(y, X) = zip*(csrs.reduce(vstack).collect)\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "import ml\n",
+    "\n",
+    "results = ml.trainTest(X,\n",
+    "                       y,\n",
+    "                       classifiers=[LogisticRegression(n_jobs=-1)],\n",
+    "                       reduce=0,\n",
+    "                       splits=4,\n",
+    "                       trainsize=0.8,\n",
+    "                       testsize=0.2)\n",
+    "pickle.dump(results, open('trained-logistic-classifier.pickle', 'wb'))    "
    ]
   },
   {
@@ -196,9 +253,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [conda env:python2.7]",
    "language": "python",
-   "name": "python2"
+   "name": "conda-env-python2.7-py"
   },
   "language_info": {
    "codemirror_mode": {
