--- a/src/extract_sarcastic-serious_json.ipynb
+++ b/src/extract_sarcastic-serious_json.ipynb
@@ -164,7 +164,13 @@
     "    bcsr = b[1]\n",
     "    return asarc.append(bsarc), vstack([acsr,bcsr], format='csr')\n",
     "\n",
-    "(y, X) = zip*(csrs.reduce(vstack).collect)\n",
+    "csrmatrix = csrs.reduce(vstack)\n",
+    "(y, X) = zip(*csrmatrix.collect())\n",
+    "\n",
+    "\"\"\" Not sure if this works\n",
+    "X = csrmatrix.values()\n",
+    "y = csrmatrix.keys()\n",
+    "\"\"\"\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "import ml\n",
